# virtool-core

./: .deepsource.toml  .drone.yml  .gitignore  .readthedocs.yaml  .releaserc  Makefile  README.md  pyproject.toml  replace_version_number.py  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  codacy.yml  publish.yml  publish_to_pypi.yml  tests.yml
bio/: __init__.py  bio.py  blast.py
docs/: bio.rst  conf.py  index.rst  logging.rst  models.rst  redis.rst  reference.rst  utils.rst
docs/_static/: custom.css
sphinx/: conf.py  index.rst
tests/: conftest.py  run_mongo_with_tests.sh  test_bio.py  test_logging.py  test_mongo.py  test_redis.py  test_utils.py
tests/__snapshots__/: test_mongo.ambr
tests/caches/: test_db.py
tests/caches/snapshots/: snap_test_db.py
tests/db/: test_core.py
tests/fixtures/: __init__.py  core.py  db.py  history.py
tests/history/: test_db.py  test_utils.py
tests/history/snapshots/: snap_test_db.py
tests/models/: test_account.py  test_analysis.py  test_analysis_model.py  test_basemodel.py  test_genbank.py  test_group.py  test_history.py  test_hmm.py  test_label.py  test_otu.py  test_sample.py  test_validator.py
tests/models/json/: analysis.json
tests/otus/: test_db.py  test_utils.py
virtool-core/: conf.py
virtool_core/: bio.py  changelog.md  conf.py  errors.py  index.rst  logging.py  mongo.py  redis.py  utils.py  wrapper.py
virtool_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
virtool_core/analyses/: db.py
virtool_core/bio/: __init__.py  bio.py  blast.py
virtool_core/caches/: db.py  utils.py
virtool_core/data_model/: __init__.py  analysis.py  files.py  hmms.py  indexes.py  jobs.py  otus.py  references.py  samples.py  subtractions.py
virtool_core/db/: __init__.py  bindings.py  core.py  utils.py
virtool_core/history/: db.py  utils.py
virtool_core/models/: __init__.py  account.py  administrator.py  analysis.py  auth.py  basemodel.py  blast.py  enums.py  genbank.py  group.py  group_minimal.py  history.py  hmm.py  index.py  instancemessage.py  job.py  label.py  ml.py  otu.py  project.py  reference.py  roles.py  sample_base.py  samples.py  searchresult.py  session.py  settings.py  spaces.py  subtraction.py  task.py  upload.py  user.py  user_base.py  validators.py
virtool_core/otus/: db.py  utils.py
virtool_core/samples/: db.py  utils.py
virtool_core/subtractions/: utils.py
