[tool.poetry]
name = "virtool-core"
version = "0.2.0"
description = "Core utilities for Virtool."
authors = ["Ian Boyes", "Blake Smith"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/virtool/virtool-core"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "virtool_core" },
]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.0"
aiofiles = "0.7.0"
arrow = "^1.2.2"
dictdiffer = "0.8.1"
psutil = "^5.8.0"
pydantic = "^1.8.2"
coloredlogs = "^15.0.1"
motor = "^3.1.2"
enum-tools = "^0.9.0.post1"
motor-types = "^1.0.0b3"
email-validator = "^2.0.0.post2"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.5.1"
pre-commit = "^2.16.0"
pytest = "^6.2.4"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.11.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-picked = "^0.4.6"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.1"
syrupy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
