[tool.poetry]
name = "virtool-core"
version = "0.2.0"
description = "Core utilities for Virtool."
authors = [
    "Ian Boyes",
    "Blake Smith",
    "Aman Monga",
    "Ryan Fang",
    "Markus Swoveland",
    "Reece Hoffmann",
    "Matt Curtis",
    "Christine Wong Chong"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/virtool/virtool-core"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "virtool_core" },
]

[tool.poetry.dependencies]
python = ">3.8,<3.13"
aioredis = "^2.0"
aiofiles = "0.7.0"
arrow = "^1.2.2"
dictdiffer = "0.8.1"
pydantic = "^1.8.2"
motor = "^3.1.2"
motor-types = "^1.0.0b3"
email-validator = "^2.0.0.post2"
structlog = "^23.1.0"
enum-tools = "^0.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^6.2.4"
pytest-aiohttp = "^0.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.2.1"
syrupy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
